--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,43 @@ html, body{
 	margin: 0;
 }
 
+/* DASHBOARD */
+.delete-btn, .update-btn {
+  border: none;
+  background-color: transparent;
+}
+
+.delete-btn {
+  padding-top: 10px;
+}
+
+.delete-btn i {
+  color: #721c24;
+  font-size: 20px;
+}
+
+.update-btn {
+  margin-left: 10px;
+}
+
+.update-btn i {
+  color: #004085;
+}
+
+.update-form {
+  display: flex;
+  flex-direction: row;
+}
+
+.status-input {
+  width: 65%;
+}
+
+.table ul {
+  text-align: left;
+}
+
+
 /* Footer */
 
 footer{
